# haguichi-indicator

./: CMakeLists.txt  INSTALL  INSTALL.md  haguichi-indicator.avprj  meson.build
debian/: changelog  control  rules
src/: CMakeLists.txt  haguichi-indicator.vala  indicator-menu.vala  session.vala
